# txpyfind

./: .gitignore  CHANGELOG  README.rst  pyproject.toml  setup.py
.github/: test.yml
.github/workflows/: pypi.yml  python-package.yml  test.yml
test/: test_parser.py  test_slub.py
txpyfind/: __init__.py  cli.py  client.py  parser.py  urlparse.py  utils.py
txpyfind/slub/: __init__.py  client.py  parser.py
utilities/: build  setup
